--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="textcontain">
             <h1 class="mainheading"> <span class="w">W</span>elcome to <span class="biggest">biggest</span>  fan club of <span class="srk">Shah Rukh Khan </span></h1>
             <div id="type-writer">
-                <h1>Proud to be SRKian!</h1>
+                <h1>Proud to be SRKian</h1>
             </div>
             <p class="mainpara">SRKCFC, A passionate Shah Rukh Khan fan club, known globally for their charity work, cherished a proud moment when SRK himself acknowledged their efforts, praising their unwavering love and dedication. </p>
             <button class="cta_btn"> <a href="#join">Follow</a></button>
