--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,23 @@
     <title>SRKCFC</title>
 </head>
 <body>
+    <section class="navigation-header">
+        <nav>
+            <div class="logo-container">
+              <img class="logo" src="asset/img/logo.png" alt="">
+                <a href="./index.html">SRKCFC</a>
+            </div>
+            <div class="navigation-items" id="navigation-items">
+                <a href="index.html" > \Back</a>
+                <a href="#" > </a>
+                
+            </div>
+            <div class="hamburger">
+                <span id="openHam">&#9776;</span>
+                <span id="closeHam">Close</span>
+            </div>
+        </nav>
+      </section>
     <section id="gallery">
         <div class="g_head"><h1>Our Gallery</h1></div>
          <div class="gallery">
