--- a/index.html
+++ b/index.html
@@ -13,30 +13,33 @@
 </head>
 <body>
     <!-- navbar  starts-->
-    <nav class="navbar">
-        <div class="container">
-            <!-- <div class="logo"> -->
-                <a href="#"><img class="lg" src="asset/img/logo.png" alt=""></a> 
-                <!-- <li>SRKCFC</li> -->
-            <!-- </div> -->
-            <div class="menu-icon" id="menu-icon">
-                <i class="ri-menu-line"></i>
+   
+    <section class="navigation-header">
+        <nav>
+            <div class="logo-container">
+              <img class="logo" src="asset/img/logo.png" alt="">
+                <a href="./index.html">SRKCFC</a>
             </div>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#bio">Biography</a></li>
-                <li><a href="#join">Join</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+            <div class="navigation-items" id="navigation-items">
+                <a href="#hero">Home</a>
+                <a href="#about">About</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#bio">Biography</a>
+                <a href="#join">Join</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="hamburger">
+                <span id="openHam">&#9776;</span>
+                <span id="closeHam">Close</span>
+                <!-- &#x2716; -->
+            </div>
+        </nav>
+      </section>
     <!-- navbar  ends-->
      <!-- hero section starts -->
     <section class="hero" id="hero" style="overflow-x: hidden;">
 
-        <div class="text" data-aos="fade-up-right">
+        <div class="text"  data-aos="zoom-in-right">
             <div class="textcontain">
             <h1 class="mainheading"> <span class="w">W</span>elcome to <span class="biggest">biggest</span>  fan club of <span class="srk">Shah Rukh Khan </span></h1>
             <div id="type-writer">
@@ -46,7 +49,7 @@
             <button class="cta_btn"> <a href="#join">Follow</a></button>
            </div>
         </div>
-        <div class="imgcontainer">     
+        <div class="imgcontainer"  data-aos="zoom-in-left">     
                 <img src="asset/img/objects.png" class="obj" id="obj" alt="">
                 <img src="asset/img/pic02.png" class="ft" alt="">
                 <!-- <div class="ex"></div> -->
@@ -69,21 +72,17 @@
   <!-- about section starts  -->
   <section class="about_section" id="about">
     <div class="abt_section01">
-        <div class="abt_text"  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div class="abt_text"   data-aos="zoom-in-right">
             <h1>A Tribute to <span class="marker">the King of Bollywood</span></h1>
             <p>
                 In the sprawling city of Chennai, where cinema is a way of life, a unique fan club has emerged, dedicated to celebrating the charisma, talent, and philanthropy of Bollywood's undisputed king, <span class="marker">Shah Rukh Khan (SRK)</span>. This fan club, known as <span class="marker">SRKCHENNAIFC</span>, stands as a testament to the enduring legacy and widespread appeal of SRK. Let's delve into the heart of this vibrant community and explore what makes <span class="marker">SRKCHENNAIFC</span> so special.
                 </P>
                 <p><span class="marker">SRKCHENNAIFC </span>was founded by a group of die-hard <span class="marker">Shah Rukh Khan</span> fans who were united by their admiration for the actor's body of work and his influence on Indian cinema. What started as a small gathering of like-minded individuals quickly grew into a large, organized fan club with members from all walks of life, bound by their love for SRK.</p>
         </div>
-        <img src="asset/img/g38.jpg" data-aos="flip-right" alt="">
+        <img src="asset/img/g38.jpg"  data-aos="zoom-in-left" alt="">
     </div>
     <div class="abt_section02">
-        <div class="abt_text"  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div class="abt_text"   data-aos="zoom-in-right">
             <h1>Celebrating <span class="marker">SRK’s</span> Legacy</h1>
             <p>The core mission of SRKCHENNAIFC is to celebrate Shah Rukh Khan's illustrious career and his contributions to the film industry. This is achieved through a variety of activities:
                 <ol>
@@ -95,13 +94,11 @@
                 </ol>
             </p>
         </div>
-        <img  src="asset/img/g03.jpg" data-aos="flip-right" alt="">
+        <img  src="asset/img/g03.jpg"  data-aos="zoom-in-left" alt="">
     </div>
 
        <div class="abt_section01">
-        <div class="abt_text"  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div class="abt_text"   data-aos="zoom-in-right">
             <h1> Engaging <span class="marker">the Digital Community</span></h1>
             <p>In today's digital age, SRKCHENNAIFC has harnessed the power of social media to connect with fans worldwide. The club's online presence is marked by:
                 <ol>
@@ -110,12 +107,10 @@
                 </ol>
             </p>
         </div>
-        <img src="asset/img/g37.jpg" data-aos="flip-right" alt="">
+        <img src="asset/img/g37.jpg"  data-aos="zoom-in-left" alt="">
     </div>
     <div class="abt_section02">
-        <div class="abt_text "  data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div class="abt_text "   data-aos="zoom-in-right">
             <h1>Memorable <span class="marker">Highlights</span></h1>
             <p>SRKCHENNAIFC has had its share of memorable moments that have cemented its status as a premier fan club.
                 <ol>
@@ -125,7 +120,7 @@
                 </ol>
             </p>
         </div>
-        <img src="asset/img/g01.jpg" data-aos="flip-right" alt="">
+        <img src="asset/img/g01.jpg"  data-aos="zoom-in-left" alt="">
     </div>
 
     </section>
@@ -145,10 +140,8 @@
          <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g29.jpg" alt="Image 7"></div>
          <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g24.jpg" alt="Image 8"></div>
          <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g22.jpg" alt="Image 9"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g31.jpg" alt="Image 10"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g32.jpg" alt="Image 11"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g26.jpg" alt="Image 12"></div>
      </div>
+     <button class="g_btn  margin_right"> <a href="gallery.html">More</a></button>
 
  
     </section>
@@ -347,10 +340,10 @@
 
 <!-- social -->
 <section class="social_section" id="join">
-    <div class="item item1" class="line" ><p>Facebook <i class="ri-facebook-circle-line"></i></p></div>
-    <div class="item item2"  class="line"> <p>Youtube <i class="ri-youtube-line"></i></p></div>
-    <div class="item item3" class="line"> <p>Twitter <i class="ri-twitter-x-line"></i></p></div>
-    <div class="item item4"  class="line"> <p>Instagram <i class="ri-instagram-line"></i></p></div>
+    <div class="item item1" class="line" ><p>Facebook <img class="social_sec_icon" src="asset/logo/fb.gif" alt=""></p></div>
+    <div class="item item2"  class="line"> <p>Youtube <img class="social_sec_icon" src="asset/logo/YT.gif" alt=""></p></div>
+    <div class="item item3" class="line"> <p>Twitter <img class="social_sec_icon" src="asset/logo/TW.gif" alt=""></p></div>
+    <div class="item item4"  class="line"> <p>Instagram <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
 </section>
 
 
