--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
     <div class="g_head"><h1>Gallery</h1></div>
      <div class="gallery">
        
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g04.jpg" alt="Image 1"></div>
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g06.jpg" alt="Image 2"></div>
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g21.jpg" alt="Image 3"></div>
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g14.jpg" alt="Image 4"></div>
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g19.jpg" alt="Image 5"></div>
-         <div class="gallery-item"  data-aos="flip-left"><img src="asset/img/g30.jpg" alt="Image 6"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g29.jpg" alt="Image 7"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g24.jpg" alt="Image 8"></div>
-         <div class="gallery-item"  data-aos="flip-right"><img src="asset/img/g22.jpg" alt="Image 9"></div>
+         <div class="gallery-item"><img src="asset/img/g04.jpg" alt="Image 1"></div>
+         <div class="gallery-item"><img src="asset/img/g06.jpg" alt="Image 2"></div>
+         <div class="gallery-item"><img src="asset/img/g21.jpg" alt="Image 3"></div>
+         <div class="gallery-item"><img src="asset/img/g14.jpg" alt="Image 4"></div>
+         <div class="gallery-item"><img src="asset/img/g19.jpg" alt="Image 5"></div>
+         <div class="gallery-item"><img src="asset/img/g30.jpg" alt="Image 6"></div>
+         <div class="gallery-item" ><img src="asset/img/g29.jpg" alt="Image 7"></div>
+         <div class="gallery-item" ><img src="asset/img/g24.jpg" alt="Image 8"></div>
+         <div class="gallery-item" ><img src="asset/img/g22.jpg" alt="Image 9"></div>
      </div>
      <button class="g_btn  margin_right"> <a href="gallery.html">More</a></button>
 
