--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="abt_text"   data-aos="zoom-in-right">
             <h1>Celebrating <span class="marker">SRK’s</span> Legacy</h1>
             <p>The core mission of SRKCHENNAIFC is to celebrate Shah Rukh Khan's illustrious career and his contributions to the film industry. This is achieved through a variety of activities:
-                <ol>
+                <ol  style="list-style: none;">
                     <li><h6 class="marker">Film Screenings and Discussions:</h6> The club regularly organizes screenings of SRK’s iconic movies, followed by lively discussions. These events provide a platform for fans to share their insights, favorite moments, and the impact SRK has had on their lives.</li>
                     <li>
                         <h6 class="marker">Tribute Events:</h6> On special occasions such as SRK’s birthday and the anniversaries of his blockbuster films, SRKCHENNAIFC hosts tribute events. These gatherings are filled with fanfare, including cake-cutting ceremonies, music, dance performances, and screenings of memorable movie clips.
@@ -101,7 +101,7 @@
         <div class="abt_text"   data-aos="zoom-in-right">
             <h1> Engaging <span class="marker">the Digital Community</span></h1>
             <p>In today's digital age, SRKCHENNAIFC has harnessed the power of social media to connect with fans worldwide. The club's online presence is marked by:
-                <ol>
+                <ol  style="list-style: none;">
                     <li><h6 class="marker">Active Social Media Channels:</h6> SRKCHENNAIFC maintains active profiles on platforms like Facebook, Twitter, and Instagram. These channels are abuzz with the latest news about SRK, fan art, video clips, and updates on upcoming events.</li>
                     <li><h6 class="marker">Interactive Campaigns:</h6> The club runs interactive campaigns and contests, encouraging fans to share their SRK stories, participate in quizzes, and create fan art. These initiatives foster a sense of community and keep the fan engagement high</li>
                 </ol>
@@ -113,7 +113,7 @@
         <div class="abt_text "   data-aos="zoom-in-right">
             <h1>Memorable <span class="marker">Highlights</span></h1>
             <p>SRKCHENNAIFC has had its share of memorable moments that have cemented its status as a premier fan club.
-                <ol>
+                <ol  style="list-style: none;">
                     <li><h6 class="marker">Meeting the Superstar:</h6> One of the most cherished memories for the club members was when they had the opportunity to meet SRK in person. This meet-and-greet session was filled with excitement, tears of joy, and heartfelt conversations.
                     </li>
                     <li><h6 class="marker">Fan Festivals:</h6> The club has successfully hosted several fan festivals, where members from different parts of the country come together to celebrate their love for SRK. These festivals are marked by music, dance, and an overwhelming sense of camaraderie.</li>
@@ -172,7 +172,7 @@
             <h1 class="signature bio_head2"><span class="marker">Film Career</span></h1>
             <h5 class="marker">Debut and Breakthrough (1992-1994)</h5>
             <p>Shah Rukh Khan made his Bollywood debut with "Deewana" (1992), which was a commercial success and won him the Filmfare Award for Best Male Debut. His subsequent films, including "Chamatkar" (1992) and "Raju Ban Gaya Gentleman" (1992), showcased his versatility. </p>
-            <ol>
+            <ol style="list-style: none;">
                 <li>Deewana (1992) - June 25, 1992 </li>
                 <li> Chamatkar (1992) - July 8, 1992</li>
                 <li>Raju Ban Gaya Gentleman (1992) - November 13, 1992</li>
@@ -196,7 +196,7 @@
     <div class="bio2">
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
                 <li>Kabhi Haan Kabhi Naa - 25 Feb, 1994 </li>
                 <li>Anjaam (1994) - April 22, 1994</li>
                 <li> Karan Arjun (1995) - January 13, 1995</li>
@@ -209,7 +209,7 @@
         </div>
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
             <li>Ram Jaane (1995) - November 29, 1995</li>
             <li>Trimurti (1995) - December 22, 1995</li>
             <li>English Babu Desi Mem- 26 Jan, 1996</li>
@@ -222,7 +222,7 @@
         </div>
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
               <li>Koyla (1997) - April 18, 1997</li>
               <li>Yes Boss (1997) - July 18, 1997</li>
               <li>Pardes (1997) - August 8, 1997</li>
@@ -242,7 +242,7 @@
     <div class="bio2a">
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
                 <li>Phir Bhi Dil Hai Hindustani-21 Jan,2000</li>
                 <li>Hey Ram (2000) - February 18, 2000</li>
                 <li>Josh (2000) - June 9, 2000</li>
@@ -258,7 +258,7 @@
         </div>
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
             <li>Aśoka (2001) - October 26, 2001</li>
             <li> Kabhi Khushi Kabhie Gham -14 Dec,2001</li>
             <li>Hum Tumhare Hain Sanam -24 May,2002</li>
@@ -274,7 +274,7 @@
         </div>
         <div class="boi_list" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <ol>
+            <ol  style="list-style: none;">
               <li>Yeh Lamhe Judaai Ke (2004) - April 9, 2004</li>
               <li>Main Hoon Na (2004) - April 30, 2004</li>
               <li>Veer-Zaara (2004) - November 12, 2004</li>
@@ -294,7 +294,7 @@
             <h1 class="bio_head2 signature"> <span class="marker">Recent Works and Future Projects (2020-2024)</span></h1>
             
             <p> In the 2020s, Shah Rukh Khan continued to remain a prominent figure in Bollywood. His recent films include significant roles and special appearances, further solidifying his legacy in Indian cinema.</p>
-            <ol>
+            <ol  style="list-style: none;">
                 <li>Brahmāstra: Part One – Shiva (2022) - Special appearance</li>
                 <li>Pathaan (2023) - January 25, 2023</li>
                 <li>Jawan (2023) - September 7, 2023</li>
@@ -340,10 +340,10 @@
 
 <!-- social -->
 <section class="social_section" id="join">
-    <div class="item item1" class="line" ><p>Facebook <img class="social_sec_icon" src="asset/logo/fb.gif" alt=""></p></div>
-    <div class="item item2"  class="line"> <p>Youtube <img class="social_sec_icon" src="asset/logo/YT.gif" alt=""></p></div>
-    <div class="item item3" class="line"> <p>Twitter <img class="social_sec_icon" src="asset/logo/TW.gif" alt=""></p></div>
-    <div class="item item4"  class="line"> <p>Instagram <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
+    <div class="item item1" class="line" ><p> <a href="https://facebook.com/SRKCHENNAIFC">Facebook</a> <img class="social_sec_icon" src="asset/logo/fb.gif" alt=""></p></div>
+    <div class="item item2"  class="line"> <p> <a href="https://youtube.com/SRKCHENNAIFC">Youtube</a> <img class="social_sec_icon" src="asset/logo/YT.gif" alt=""></p></div>
+    <div class="item item3" class="line"> <p><a  href="https://X.com/TeamSRKCFC">Twitter</a> <img class="social_sec_icon" src="asset/logo/TW.gif" alt=""></p></div>
+    <div class="item item4"  class="line"> <p><a href=" https://instagram.com/teamsrkcfc">Instagram</a> <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
 </section>
 
 
