--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- hero section ends  -->
     <!-- pride section starts  -->
  <section class="pride_section" style="overflow-x: hidden;">
-     <div class="item item1"  data-aos="zoom-in-left" ><p>Breanches 75+</p></div>
+     <div class="item item1"  data-aos="zoom-in-left" ><p>Branches 75+</p></div>
      <div class="item item2" data-aos="zoom-in-left" > <p>Members 3K+</p></div>
      <div class="item item3" data-aos="zoom-in-left" > <p>Cities 60+</p></div>
      <div class="item item4" data-aos="zoom-in-left" > <p>Country 15+</p></div>
@@ -481,13 +481,13 @@
         <div class="footer-content"  class="line" >
             <div class="footer-about">
                 <h3 class="marker">About the Developer</h3>
-                <p>Developer Name: <a href="https://www.facebook.com/mdsahid420?mibextid=ZbWKwL">Md Sahid Sk</a></p>
+                <p>Developer Name: <a href="https://mdsahidsk.netlify.app">Md Sahid Sk</a></p>
                 <p>Passionate web developer with a focus on creating intuitive and responsive designs.</p>
             </div>
             <div class="footer-contact">
                 <h3 class="marker">Contact</h3>
                 <p>Email: <a href="mailto:sahidsk6901@gmail.com">sahidsk6901@gmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/md-sahid-sk-12b1392b3/"> Md Sahid Sk</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/md-sahid-sk-12b1392b3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> Md Sahid Sk</a></p>
             </div>
             <div class="footer-links">
                 <h3 class="marker">Quick Links</h3>
