updated member links

--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
             <h3>Sudhir Kothari</h3>
             <p> Founder</p>
             <div class="social-icons">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-twitter-x-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.facebook.com/sudhirkothari03?mibextid=LQQJ4d"><i class="ri-facebook-fill"></i></a>
+                <a href="https://x.com/sudhirkothari03?s=21&t=IYAxPMdAeYascGfPiEGTkw"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/sudhirkothari03/profilecard/?igsh=YmxkdDBpYWR6Ymt3"><i class="ri-instagram-line"></i></a>
             </div>
         </div>
 
@@ -372,8 +372,8 @@
             <p> Co-Founder</p>
             <div class="social-icons">
                 <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-twitter-x-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="https://x.com/rshah2611"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/rshah2611?igsh=Y2hrd3huMTJodXlt"><i class="ri-instagram-line"></i></a>
             </div>
         </div>
 
@@ -383,9 +383,9 @@
             <h3>Riyaz Khan</h3>
             <p> Manager</p>
             <div class="social-icons">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-twitter-x-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.facebook.com/share/CxcMctj8iYiVpjmA/?mibextid=qi2Omg"><i class="ri-facebook-fill"></i></a>
+                <a href="https://x.com/RiyazSrkian?t=QM0kQhy7l94nZd3nYHlZuw&s=08"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/riyaz_k555?igsh=MWZwbDJuaG14d290"><i class="ri-instagram-line"></i></a>
             </div>
         </div>
 
@@ -395,21 +395,22 @@
             <h3>RT Rahul </h3>
             <p>Co-Founder</p>
             <div class="social-icons">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-twitter-x-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.facebook.com/share/TwH5qbNLSg9zPvg2/"><i class="ri-facebook-fill"></i></a>
+                <a href="https://x.com/rahulDROSH?t=LRo6pxJNse00W5-1P8_C9Q&s=09"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/rahul_drosh/profilecard/?igsh=dW1xNjR1czA3cXp3"><i class="ri-instagram-line"></i></a>
             </div>
         </div>
 
         <div class="team-member" class="line" data-aos="fade-up"
         data-aos-anchor-placement="center-center">
-            <img src="asset/img/g35.jpg" alt="Team Member 5">
+            <img src="asset/img/is.JPG" alt="Team Member 5">
             <h3>Iashin Aktar</h3>
             <p>Editorial Director</p>
             <div class="social-icons">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
-                <a href="#"><i class="ri-twitter-x-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.facebook.com/iashinaktar0"><i class="ri-facebook-fill"></i></a>
+                <a href="https://www.X.com/iashinaktar0"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/iashinaktar
+                "><i class="ri-instagram-line"></i></a>
             </div>
         </div>
     </div>
