--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 <a href="https:www.facebook.com/mdsahid420" > Md <span class="marker">Sahid</span> Sk</a>. All Rights Reserved.</p>
+        <p>&copy; 2024 <a href="https://www.facebook.com/mdsahid420?mibextid=ZbWKwL" > Md <span class="marker">Sahid</span> Sk</a>. All Rights Reserved.</p>
     </div>
 </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
