--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <a href="./index.html">SRKCFC</a>
             </div>
             <div class="navigation-items" id="navigation-items">
-                <a href="#hero">Home</a>
-                <a href="#about">About</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#bio">Biography</a>
-                <a href="#join">Join</a>
-                <a href="#contact">Contact</a>
+                <a  class="cItem1" href="#hero">Home</a>
+                <a class="cItem2" href="#about">About</a>
+                <a class="cItem3" href="#gallery">Gallery</a>
+                <a class="cItem4" href="#bio">Biography</a>
+                <a class="cItem5" href="#join">Join</a>
+                <a class="cItem6" href="#contact">Contact</a>
             </div>
             <div class="hamburger">
                 <span id="openHam">&#9776;</span>
