--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
               <img class="logo" src="asset/img/logo.png" alt="">
                 <a href="./index.html">SRKCFC</a>
             </div>
-            <div class="navigation-items" id="navigation-items">
+            
+            <div class="navigation-items" id="">
+                <a  href="#hero">Home</a>
+                <a  href="#about">About</a>
+                <a  href="#gallery">Gallery</a>
+                <a  href="#bio">Biography</a>
+                <a  href="#join">Join</a>
+                <a  href="#contact">Contact</a>
+            </div>
+            <div class="navigation-items1" id="navigation-items">
                 <a  class="cItem1" href="#hero">Home</a>
                 <a class="cItem2" href="#about">About</a>
                 <a class="cItem3" href="#gallery">Gallery</a>
@@ -30,8 +39,8 @@
             </div>
             <div class="hamburger">
                 <span id="openHam">&#9776;</span>
-                <span id="closeHam">Close</span>
-                <!-- &#x2716; -->
+                <span id="closeHam">&#9776;</span>
+                <!-- &#9776; -->
             </div>
         </nav>
       </section>
