contact form working now

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img class="logo" src="asset/img/logo.png" alt="">
                 <a href="./index.html">SRKCFC</a>
             </div>
-            
+            <!-- for desktop -->
             <div class="navigation-items" id="">
                 <a  href="#hero">Home</a>
                 <a  href="#about">About</a>
@@ -29,6 +29,8 @@
                 <a  href="#join">Join</a>
                 <a  href="#contact">Contact</a>
             </div>
+            <!-- for desktop -->
+            <!-- for mobile -->
             <div class="navigation-items1" id="navigation-items">
                 <a  class="cItem1" href="#hero">Home</a>
                 <a class="cItem2" href="#about">About</a>
@@ -42,6 +44,7 @@
                 <span id="closeHam">&#9776;</span>
                 <!-- &#9776; -->
             </div>
+            <!-- for mobile -->
         </nav>
       </section>
     <!-- navbar  ends-->
@@ -135,7 +138,7 @@
     </section>
  <!-- about section ends -->
 
-
+<!-- gallery start -->
  <section id="gallery">
     <div class="g_head"><h1>Gallery</h1></div>
      <div class="gallery">
@@ -154,7 +157,7 @@
 
  
     </section>
-
+<!-- gallery end  -->
 
 
 
@@ -343,9 +346,7 @@
     </div>
     
    </section>
-
-
-
+<!-- bio -->
 
 <!-- social -->
 <section class="social_section" id="join">
@@ -355,8 +356,7 @@
     <div class="item item4"  class="line"> <p><a href=" https://instagram.com/teamsrkcfc">Instagram</a> <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
 </section>
 
-
-
+<!-- social  end -->
 
 <!-- meet our team  -->
 <section class="team-section">
@@ -430,26 +430,16 @@
         <p class="marker l">“Thanks to all the admins, members and everyone who are connected with SRKCFC for being with us always. Keep spreading love with SRK.”</p>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- Sweet Message end  -->
+ <!-- meet our team end   -->
 
 <!-- contact -->
 
   <section>
     <div class="contact-container" id="contact">
-        <form class="contact-form"  class="line" data-aos="zoom-in-down">
+        <form class="contact-form"  class="line" data-aos="zoom-in-down"  action="https://api.web3forms.com/submit" method="POST">
             <h2>Contact Us</h2>
+            <input type="hidden" name="access_key" value="71d0a8bd-dd60-40a9-9bd3-cf8c29267592">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
@@ -472,19 +462,8 @@
         </form>
     </div>
 
-
-
-
   </section>
-
-
-
-
-
-
-
-
-
+  <!-- contact end  -->
  <!-- Footer Section -->
  <footer class="footer">
     <div class="fcontainer">
@@ -514,6 +493,7 @@
         <p>&copy; 2024 <a href="https://www.facebook.com/mdsahid420?mibextid=ZbWKwL" > Md <span class="marker">Sahid</span> Sk</a>. All Rights Reserved.</p>
     </div>
 </footer>
+<!-- Footer Section  end -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- for bootstrap -->
      <script src="asset/bootstrap/js/app.js"></script>
