title and logo and animation done

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,10 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>SRKCFC</title>
+    <link rel="icon" type="image/png" href="asset/img/logo.png">
+    <meta name="description" content="SRKCFC, A passionate Shah Rukh Khan fan club, known globally for their charity work, cherished a proud moment when SRK himself acknowledged their efforts, praising their unwavering love and dedication.">
+    <meta name="keywords" content="SRKCFC, SRKCHENNAIFC , SRK ,CFC, SRK FAN CLUB,SRK CHENNAI FAN CLUB, SRK FAN CLUB,SRK BIGGEST FAN CLUB,SRKUNIVERSE,SRK LATEST NEWS, SHAH RUKH KHAN FAN CLUB,SRK PHOTOS,SHAH RUKH KHAN LATEST NEWS,KING OF BOLLYWOOD,">
+    <title>SRKCFC-GALLERY</title>
 </head>
 <body>
     <section class="navigation-header">
