--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SRKCFC, A passionate Shah Rukh Khan fan club, known globally for their charity work, cherished a proud moment when SRK himself acknowledged their efforts, praising their unwavering love and dedication.">
+    <meta name="keywords" content="SRKCFC, SRKCHENNAIFC , SRK ,CFC, SRK FAN CLUB,SRK CHENNAI FAN CLUB, SRK FAN CLUB,SRK BIGGEST FAN CLUB,SRKUNIVERSE,SRK LATEST NEWS, SHAH RUKH KHAN FAN CLUB,SRK PHOTOS,SHAH RUKH KHAN LATEST NEWS,KING OF BOLLYWOOD,">
+    <link rel="icon" type="image/png" href="asset/img/logo.png">
     <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="asset/bootstrap/css/style.css">
     <link
@@ -200,14 +203,12 @@
             <img src="asset/img/pic03.jpg" alt="">
         </div>
     </div>
-    <div class="line" data-aos="fade-up"
-    data-aos-anchor-placement="center-center">
+    <div class="line" >
         <h1 class="signature bio_head2"><span class="marker">Rise to Stardom (1994-1999)</span></h1>
         <p>Khan's roles in "Baazigar" (1993) and "Darr" (1993) established him as a leading actor. He continued to deliver hits with films like "Kabhi Haan Kabhi Naa" (1994) and "Anjaam" (1994).</p>
     </div>
     <div class="bio2">
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
                 <li>Kabhi Haan Kabhi Naa - 25 Feb, 1994 </li>
                 <li>Anjaam (1994) - April 22, 1994</li>
@@ -219,8 +220,7 @@
                 <li>Phir Bhi Dil Hai Hindustani-21 Jan, 2000</li>
             </ol>
         </div>
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
             <li>Ram Jaane (1995) - November 29, 1995</li>
             <li>Trimurti (1995) - December 22, 1995</li>
@@ -232,8 +232,7 @@
             <li>Kuch Kuch Hota Hai (1998) - October 16, 1998</li>
         </ol>
         </div>
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
               <li>Koyla (1997) - April 18, 1997</li>
               <li>Yes Boss (1997) - July 18, 1997</li>
@@ -246,14 +245,12 @@
           </ol>
         </div>
     </div>
-    <div class="line" data-aos="fade-up"
-    data-aos-anchor-placement="center-center">
+    <div class="line" >
         <h1 class="signature bio_head2"><span class="marker">Established Superstar (2000-2009)</span></h1>
         <p>The 2000s saw Khan solidify his status as a superstar with blockbuster hits and critically acclaimed performances. He took on diverse roles in films like "Mohabbatein" (2000), "Devdas" (2002), and "Swades" (2004).</p>
     </div>
     <div class="bio2a">
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
                 <li>Phir Bhi Dil Hai Hindustani-21 Jan,2000</li>
                 <li>Hey Ram (2000) - February 18, 2000</li>
@@ -268,8 +265,7 @@
                 <li> I See You (2006) - Special appearance</li>
             </ol>
         </div>
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
             <li>Aśoka (2001) - October 26, 2001</li>
             <li> Kabhi Khushi Kabhie Gham -14 Dec,2001</li>
@@ -284,8 +280,7 @@
             <li>Heyy Babyy (2007) - Special appearance</li>
         </ol>
         </div>
-        <div class="boi_list" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="boi_list" >
             <ol  style="list-style: none;">
               <li>Yeh Lamhe Judaai Ke (2004) - April 9, 2004</li>
               <li>Main Hoon Na (2004) - April 30, 2004</li>
@@ -302,7 +297,7 @@
         </div>
     </div>
     <div class="bio1" >
-        <div class="bio_text"  data-aos="zoom-in-right">
+        <div class="bio_text"  data-aos="zoom-in-right" >
             <h1 class="bio_head2 signature"> <span class="marker">Recent Works and Future Projects (2020-2024)</span></h1>
             
             <p> In the 2020s, Shah Rukh Khan continued to remain a prominent figure in Bollywood. His recent films include significant roles and special appearances, further solidifying his legacy in Indian cinema.</p>
@@ -350,10 +345,10 @@
 
 <!-- social -->
 <section class="social_section" id="join">
-    <div class="item item1" class="line" ><p> <a href="https://facebook.com/SRKCHENNAIFC">Facebook</a> <img class="social_sec_icon" src="asset/logo/fb.gif" alt=""></p></div>
-    <div class="item item2"  class="line"> <p> <a href="https://youtube.com/SRKCHENNAIFC">Youtube</a> <img class="social_sec_icon" src="asset/logo/YT.gif" alt=""></p></div>
-    <div class="item item3" class="line"> <p><a  href="https://X.com/TeamSRKCFC">Twitter</a> <img class="social_sec_icon" src="asset/logo/TW.gif" alt=""></p></div>
-    <div class="item item4"  class="line"> <p><a href=" https://instagram.com/teamsrkcfc">Instagram</a> <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
+    <div class="item item1" class="line"  data-aos="zoom-in-left"><p> <a href="https://facebook.com/SRKCHENNAIFC">Facebook</a> <img class="social_sec_icon" src="asset/logo/fb.gif" alt=""></p></div>
+    <div class="item item2"  class="line" data-aos="zoom-in-left"> <p> <a href="https://youtube.com/SRKCHENNAIFC">Youtube</a> <img class="social_sec_icon" src="asset/logo/YT.gif" alt=""></p></div>
+    <div class="item item3" class="line" data-aos="zoom-in-left"> <p><a  href="https://X.com/TeamSRKCFC">Twitter</a> <img class="social_sec_icon" src="asset/logo/TW.gif" alt=""></p></div>
+    <div class="item item4"  class="line" data-aos="zoom-in-left"> <p><a href=" https://instagram.com/teamsrkcfc">Instagram</a> <img class="social_sec_icon" src="asset/logo/ins.gif" alt=""></p></div>
 </section>
 
 <!-- social  end -->
@@ -362,8 +357,7 @@
 <section class="team-section">
     <h1 class="l">Meet Our Team</h1>
     <div class="team-container">
-        <div class="team-member" class="line" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="team-member" class="line" >
             <img src="asset/img/g37.jpg" alt="Team Member 1">
             <h3>Sudhir Kothari</h3>
             <p> Founder</p>
@@ -374,8 +368,7 @@
             </div>
         </div>
 
-        <div class="team-member" class="line" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="team-member" class="line" >
             <img src="asset/img/g39.jpg" alt="Team Member 2">
             <h3>Rakshit Shah</h3>
             <p> Co-Founder</p>
@@ -386,20 +379,7 @@
             </div>
         </div>
 
-        <div class="team-member" class="line" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
-            <img src="asset/img/g40.jpg" alt="Team Member 3">
-            <h3>Riyaz Khan</h3>
-            <p> Manager</p>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/share/CxcMctj8iYiVpjmA/?mibextid=qi2Omg"><i class="ri-facebook-fill"></i></a>
-                <a href="https://x.com/RiyazSrkian?t=QM0kQhy7l94nZd3nYHlZuw&s=08"><i class="ri-twitter-x-line"></i></a>
-                <a href="https://www.instagram.com/riyaz_k555?igsh=MWZwbDJuaG14d290"><i class="ri-instagram-line"></i></a>
-            </div>
-        </div>
-
-        <div class="team-member"  class="line" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="team-member"  class="line" >
             <img src="asset/img/g38.jpg" alt="Team Member 4">
             <h3>RT Rahul </h3>
             <p>Co-Founder</p>
@@ -410,8 +390,7 @@
             </div>
         </div>
 
-        <div class="team-member" class="line" data-aos="fade-up"
-        data-aos-anchor-placement="center-center">
+        <div class="team-member" class="line" >
             <img src="asset/img/is.JPG" alt="Team Member 5">
             <h3>Iashin Aktar</h3>
             <p>Editorial Director</p>
@@ -422,11 +401,21 @@
                 "><i class="ri-instagram-line"></i></a>
             </div>
         </div>
+
+        <div class="team-member" class="line" >
+            <img src="asset/img/g40.jpg" alt="Team Member 3">
+            <h3>Riyaz Khan</h3>
+            <p> Manager</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/share/CxcMctj8iYiVpjmA/?mibextid=qi2Omg"><i class="ri-facebook-fill"></i></a>
+                <a href="https://x.com/RiyazSrkian?t=QM0kQhy7l94nZd3nYHlZuw&s=08"><i class="ri-twitter-x-line"></i></a>
+                <a href="https://www.instagram.com/riyaz_k555?igsh=MWZwbDJuaG14d290"><i class="ri-instagram-line"></i></a>
+            </div>
+        </div>
     </div>
     
     <!-- Sweet Message -->
-    <div class="team-message"  class="line" data-aos="fade-up"
-    data-aos-anchor-placement="center-center">
+    <div class="team-message"  class="line">
         <p class="marker l">“Thanks to all the admins, members and everyone who are connected with SRKCFC for being with us always. Keep spreading love with SRK.”</p>
     </div>
 </section>
